docs/tests/parser/control_flow/invalid/WhileMissingOpenBrace.b
fn void test() {
    while (true)
        x++;
}
